...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/liked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="liked by"
                />

            <Button
                android:id="@+id/disliked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="disliked by"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
...
