<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/new_user_menu"
    android:layout_height="match_parent"
    tools:context=".NewUserMenu">

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/menu2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
...
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="friend list"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gymsBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="Gyms"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/userInfo"
...
            android:layout_marginTop="33dp"
            android:layout_toEndOf="@+id/progressBar"
            android:text="TextView" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu1"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/userInfo"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
...
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="Chat">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/milestoneBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="Milestone"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
...
