...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gold"
    android:id="@+id/add_gyms_id"
    tools:context=".addgymsPage">


    <TextView
        android:id="@+id/addgymsTitle"
        android:layout_width="wrap_content"
...

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addgyms_list"
        android:layout_below = "@id/addgymsBtn"
        android:text="view gyms"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin = "20dp"

        />
...
