<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background"
    android:id="@+id/mile_stone"
    tools:context=".milestone">

    <TextView
        android:id="@+id/milestoneMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Milestone"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/workoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/milestoneMsg"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="workout name"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weights"
        android:layout_below = "@id/workoutName"
        android:hint="weights"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reps"
        android:layout_below = "@id/weights"
        android:hint="reps"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sets"
        android:layout_below = "@id/reps"
        android:hint="sets"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:layout_below="@id/sets"
        android:text="Add"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/progressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:layout_below="@id/addButton"
        android:text="show progress"
        android:textColor="@color/black" />



</RelativeLayout>